VOD completed and base created for live stream using RTMP and FFMPEG